Fix tablet size header wrap
When header was just the right size (about tablet horiz)
the search bar would wrap under the rest of the header

--- a/index.css
+++ b/index.css
@@ -22,6 +22,11 @@ small {
 {
     margin-left: 0px !important;
 }
+.navigation .nav li > a
+{
+    padding-left: 18px;
+    padding-right: 18px;
+}
 
 .content {
     margin-top: 30px;
